deployments/simple/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 381354187112.dkr.ecr.us-east-1.amazonaws.com/simple-frontend:latest
        ports:
          - containerPort: 80
