deployments/simple/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: backend
