deployments/simple/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-backend
  labels:
    app: simple-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /(.+)
        pathType: Prefix
        backend:
          service: 
            name: backend
            port:
              number: 80
