deployments/simple/ingress-frontend-root-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-frontend
  labels:
    app: simple-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend
            port:
              number: 80
